# sin-in

./: .gitignore  Cargo.toml  README.md  build.toml  samconfig-api.toml  samconfig-email.toml  samconfig.toml  template-email.yaml  template.yaml
.build/: template.yaml
add-member/: Cargo.toml  Makefile
add-member/src/: main.rs
app-core/: Cargo.toml
app-core/src/: api.rs  lib.rs  types.rs
app-server-core/: Cargo.toml
app-server-core/src/: crud.rs  lib.rs  runtime.rs  serialize.rs
delete-member/: Cargo.toml  Makefile
delete-member/src/: main.rs
edit-member/: Cargo.toml  Makefile
edit-member/src/: main.rs
email-confirm/: Cargo.toml  Makefile
email-confirm/src/: main.rs
email-handler/: Cargo.toml  Makefile
email-handler/src/: main.rs
email-input-handler/: Cargo.toml  Makefile
email-input-handler/src/: main.rs
email-sender/: Cargo.toml  Makefile
email-sender/src/: main.rs
list-members/: Cargo.toml  Makefile
list-members/src/: main.rs
members-delete/: Cargo.toml  Makefile
members-delete/src/: main.rs
members-list/: Cargo.toml  Makefile
members-list/src/: main.rs
members-update/: Cargo.toml  Makefile
members-update/src/: main.rs
topics-delete/: Cargo.toml  Makefile
topics-delete/src/: main.rs
topics-list/: Cargo.toml  Makefile
topics-list/src/: main.rs
topics-update/: Cargo.toml  Makefile
topics-update/src/: main.rs
update-member/: Cargo.toml  Makefile
update-member/src/: main.rs
