[workspace]
members = [
  "app-core",
  "app-server-core",
  "members-update",
  "members-delete",
  "members-list",
  "topics-update",
  "topics-delete",
  "topics-list",
  "email-input-handler",
  "email-sender",
  "email-confirm",
]

[workspace.package]
version = "0.1.0"
authors = ["mdsimmo"]
edition = "2021"

