[package]
name = "add-member"
version = "0.1.0"
authors = ["mdsimmo"]
edition = "2021"

[dependencies]
lambda_http = "0.7"
lambda_runtime = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = "1"
serde_json = "1"
log = "0.4.17"
http = "0.2.8"
tracing-subscriber = "0.3.16"