[package]
name = "app-server-core"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
app-core = { path = "../app-core" }
serde = "1"
serde_json = "1"
lambda_http = "0.7"
model = "0.1.2"
aws-sdk-dynamodb = ">=0"
aws-config = "0.55"
log = "0.4.17"
rand = "0.8.5"