[package]
name = "email-input-handler"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
app-server-core = { path = "../app-server-core" }
lambda_runtime = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = "1"
serde_json = "1"
log = "0.4.17"
tracing-subscriber = "0.3"
aws-sdk-dynamodb = "0.25"
aws-sdk-sesv2 = "0.25"
aws-sdk-sqs = "0.25"
aws-sdk-s3 = "0.25"
aws-config = "0.55"
aws_lambda_events = "0.8.3"
