[package]
name = "topics-delete"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
app-server-core = { path = "../app-server-core" }
lambda_http = "0.7"
lambda_runtime = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = "1"
serde_json = "1"
log = "0.4.17"
http = "0.2.9"
tracing-subscriber = "0.3.16"
aws-sdk-dynamodb = "0.25"
aws-config = "0.55"
